--- a/_posts/2017-07-07-Git-Notes.md
+++ b/_posts/2017-07-07-Git-Notes.md
@@ -4,12 +4,13 @@ title:  自底向上理解Git原理
 date:   2018-07-07
 categories: Git
 tags: Git 计算机基础
-excerpt: 
+excerpt: Git是目前最流行的版本管理工具，但是由于其命令比较复杂，有时候无法很顺利的使用，但是，一旦了解Git的底层原理，那么Git的命令也就变得简单起来。本文是[Git From the Bottom Up](https://jwiegley.github.io/git-from-the-bottom-up/)的总结与拓展
 mathjax: true
 ---
 
 * content
 {:toc}
+
 ## 前言
 Git是目前最流行的版本管理工具，但是由于其命令比较复杂，有时候无法很顺利的使用，但是，一旦了解Git的底层原理，那么Git的命令也就变得简单起来。本文是[Git From the Bottom Up](https://jwiegley.github.io/git-from-the-bottom-up/)的总结与拓展
 
