--- a/_posts/2017-07-07-Git-Notes.md
+++ b/_posts/2017-07-07-Git-Notes.md
@@ -10,7 +10,7 @@ mathjax: true
 * content
 {:toc}
 
-excerpt: Git是目前最流行的版本管理工具，但是由于其命令比较复杂，有时候无法很顺利的使用，但是，一旦了解Git的底层原理，那么Git的命令也就变得简单起来。本文是[Git From the Bottom Up](https://jwiegley.github.io/git-from-the-bottom-up/)的总结与拓展
+Git是目前最流行的版本管理工具，但是由于其命令比较复杂，有时候无法很顺利的使用，但是，一旦了解Git的底层原理，那么Git的命令也就变得简单起来。本文是[Git From the Bottom Up](https://jwiegley.github.io/git-from-the-bottom-up/)的总结与拓展
 
 
 
