update rfcn note

--- a/_posts/2018-07-13-R-FCN.md
+++ b/_posts/2018-07-13-R-FCN.md
@@ -12,7 +12,9 @@ author: Prince
 {:toc}
 ![15063403082127](http://oodo7tmt3.bkt.clouddn.com/blog_201807132042010817.jpg)
 
-在Detection任务中现在主要分为1-stage和2-stage两种方法，其中典型的方法分别是Faster-RCNN和SSD，两种方法各有优缺点，对于Faster-RCNN这一族的主要缺点就是比较慢，原因在前几篇文章中都提到了，Faster-RCNN使用了RPN来加速Selective Search的过程，并且使网络实现了End to End。R-FCN重点解决了FasterRCNN头（header）比较中的问题，利用本文中提出的PS-ROIPooling，使RPN提出的每一个ROI，都在Backbone网络的顶层特征图上提取一次，而不再次经过特征提取，从而加速的Faster RCNN的训练和测试速度。
+在Detection任务中现在主要分为one stage和two stage两种方法，其中典型的方法分别是Faster-RCNN和SSD，两种方法各有优缺点，对于Faster-RCNN这一族的主要缺点就是比较慢，原因在前[几篇文章](http://blog.prince2015.club)中都提到了，Faster-RCNN使用了RPN来加速Selective Search的过程，并且使网络实现了End to End。R-FCN重点解决了FasterRCNN头（header）比较重的问题，利用本文中提出的PS-ROIPooling，使RPN提出的每一个ROI，都在Backbone网络的顶层特征图上提取一次，而不再次经过特征提取，从而加速的Faster RCNN的训练和测试速度。
+
+参考代码: https://github.com/princewang1994/R-FCN.pytorch
 
 
 
@@ -21,16 +23,16 @@ author: Prince
 
 Faster RCNN中，即使加入了RPN，Faster-RCNN还是比one stage方法慢原因是什么呢？分析原因如下：
 
-- 重复计算：
+- 特征图重复计算：
 
-  Faster RCNN中，RPN将会生成多个ROI区域，通过ROI Pooling将这些ROI区域逐一输入Fast-RCNN中进行分类，分类使用的是全连接层，由于RPN提出的ROI数量通常比较多（300以上），会有大量重叠的roi，这些roi每个都得经过ROIPooling之后传入特征提取网络（Fast RCNN）导致了大量冗余计算。
+  Faster RCNN中，RPN将会生成多个ROI区域，通过ROI Pooling将这些ROI区域逐一输入Fast-RCNN中进行分类，分类使用的是全连接层，由于RPN提出的ROI数量通常比较多（300以上），会有大量重叠的roi，这些roi每个都得经过ROIPooling之后传入特征提取网络Fast RCNN导致了大量冗余计算。
 
 - 特征提取的Header比较重：
 
   - 使用VGG作为backbone时，Faster-RCNN使用VGG的全连接层(4096 -> 4096 -> 21)来进行分类
   - 使用ResNet作为backbone时，Faster-RCNN使用ResNet的C4层特征图传入RPN，而C5层则作为分类器放在ROIPooling后面（1024->2048）
 
-那么有没有办法在ROI分类的时候使计算能够共享，这样只需要将原图通过一系列卷积成一个大特征图，然后直接在这个生成的大特征图上提取ROI区域而不使用全连接层呢？（这种想法是不是很类似于RCNN演变为Fast-RCNN的方法？）这就促使研究者们开始研究“全卷积化”的Faster-RCNN，也就是RFCN。
+那么有没有办法在ROI分类的时候使计算能够共享，这样只需要将原图通过一系列卷积成一个大特征图，然后直接在这个生成的大特征图上提取ROI区域而不使用后面厚重的全连接层呢？这就促使研究者们开始研究“全卷积化”的Faster-RCNN，也就是RFCN。
 
 ## R-FCN 与 Faster-RCNN的关系与区别
 
@@ -38,7 +40,7 @@ R-FCN最重要的特点是，结构中不存在全连接层，而使用卷积层
 
 ![](http://oodo7tmt3.bkt.clouddn.com/blog_201807132042300996.jpg)
 
-首先是RPN网络用来提取ROI区域，目的是对找出包含Object可能性较高的候选框，然后在共享计算的特征图上把这些ROI抠出来，使用SPP的方法（也就是Faster RCNN所说的ROI Pooling）映射为固定长度的特征向量再通过FC层最后分类。
+首先是一个RPN网络用来提取ROI区域，目的是对找出包含Object可能性较高的候选框，然后在共享计算的特征图上把这些ROI抠出来，使用SPP的方法（也就是Faster RCNN所说的ROI Pooling）映射为固定长度的特征向量再通过FC层最后分类。
 
 R-FCN取消了ROI Pooling，取而代之的使用**Position-Sensitive ROI Pooling(ps-roi-pooing)**来使所有的ROI能够共享计算，而不对每个ROI都使用一次完全的Fully Connected Layer。
 
@@ -48,13 +50,13 @@ R-FCN的整体结构如下：
 
 ![15063403082127](http://oodo7tmt3.bkt.clouddn.com/blog_201807132042010817.jpg)
 
-由于Faster RCNN的特征提取网络中大量的卷积和下采样，所以平移不变性的问题在R-FCN中尤为凸显，最直观的感受就是特征图大小逐渐缩小，而给出图像中足够的位置信息。相比于Faster-RCNN利用ROI Pooling来截断平移不变性，全卷积网络不停的卷积会出现很大程度上的平移不变性，从而导致Localization的准确率降低。
+由于Faster RCNN的特征提取网络中大量的卷积和下采样，所以平移不变性的问题在R-FCN中尤为凸显，最直观的感受就是特征图大小逐渐缩小，而给出图像中足够的位置信息不足。相比于Faster-RCNN利用ROI Pooling来截断平移不变性，R-FCN全卷积网络不停的卷积会出现很大程度上的平移不变性，从而导致Localization的准确率降低。
 
 ### 解决方法
 
 1. 增大特征图
 
-一种方法是使用Atrous Convolution增大特征图，在本文中，使用ResNet作为Backbone的网络，在conv5中把stride=2改成了stride=1，然后把conv5的每个卷积层的dilation都设成2，这样有效增大了ResNet的特征图大小，并且保持了conv4阶段的特征图分辨率，并拥有了增大了感受野。
+一种方法是使用Atrous Convolution增大特征图，在本文中，使用ResNet作为Backbone的网络，在conv5中把stride=2改成了stride=1，然后把conv5的每个卷积层的dilation都设成2（注意在Bottleneck层中，只有中间的3x3的卷积层设为2），这样有效增大了ResNet的特征图大小，并且保持了conv4阶段的特征图分辨率，并增大了感受野。
 
 
 2. Position Sensitive ROI Pooling 
@@ -69,34 +71,48 @@ R-FCN的整体结构如下：
 
 接下来描述一下ps roi pooling的具体运行方式：
 
-首先由于共享计算，RPN得到的features会被复用到后面的分类中，这个特征提取器文中是使用的resnet101，假设这个特征图的大小是[1, H, W, 1024]，本来ROI Pooling直接就在这上面截取ROI来分类了，而现在我们再后面再接上ResNet的C5（1024->2048, dilation=2），继续在上面接一个1x1的卷积(2048->1024)，不改变特征图大小，把通道缩减为k x k x (C+1)，这里的k指的是bin的数量，也就是上面说的3，类别假设是20。
+首先由于共享计算，RPN得到的features会被复用到后面的分类中，这个特征提取器文中是使用的resnet101，假设这个特征图的大小是[1, H, W, 1024]，本来ROI Pooling直接就在这上面截取ROI来分类了，而现在我们再后面再接上ResNet的C5（1024->2048, dilation=2），继续在上面接一个1x1的卷积(2048->1024)，这个操作是为了降维和通道整合，同时不改变特征图大小。再经过一个1x1的卷积，把通道缩减为k x k x (C+1)，这里的k指的是bin的数量，也就是上面说的3，类别假设是20，在实际的实现中，大部分的情况k=7。
 
 ![15063386443591](http://oodo7tmt3.bkt.clouddn.com/blog_201807132042020330.jpg)
 
-现在特征图大小是[1, H, W, 3x3x21]了，如下图，相同颜色的特征图对应着结果中对应颜色的位置，比如黄色的特征图对应结果中的左上角。特征图被分为9x21个，每21个特征图代表这个位置（比如左上角）的21个分类的分数，**比如[0~21]的特征图中每个点(x, y)表示原图上这个点是对应物体“左上部分“的概率，[22~41]的特征图中每个点(x, y)表示原图上这个点是对应物体“上部分“的概率**，按下图的方法，把对应的特征图的部分做Average Pooling变为9个[1x1x21]的特征图后把这些特征图拼成[9x9x21]，这个新的特征图的每个位置表示了该ROI候选框的9个子块区域是21个物体某一部分的概率。可以形象理解为下图：
+现在特征图大小是[1, H, W, 3x3x21]了，如下图，相同颜色的特征图对应着结果中对应颜色的位置，比如黄色的特征图对应结果中的左上角。特征图被分为9x21通道，每21个特征图代表这个位置（比如左上角）的21个分类的分数，**比如[0~20]的特征图中每个点(x, y)表示原图上这个点是对应物体“左上部分“的概率，[21~41]的特征图中每个点(x, y)表示原图上这个点是对应物体“上部分“的概率**，以此类推。为了更直观的说明PS-ROIPooling的过程，我画了下面的示意图：
+
+
 
 ![PSROIPooing](http://oodo7tmt3.bkt.clouddn.com/blog_201807132042030076.png)
-用文中的公式表示这个过程就是下面这样：
 
+在上图中，每个ROI也被分为了3x3的bins，就和我们在普通的ROIPooling中做的一样，在确定完输入和输出的映射以后，PS-ROIPooling把对应的block中的值求Average Pooling（红色箭头），最后得出了一个[1x1x21]的向量。在经过PS-ROIPooling之后，把对应的特征图的部分做Average Pooling后的9个[1x1x21]的特征图后把这些特征图拼成[9x9x21]，这个新的特征图的每个位置表示了该ROI候选框的9个子块区域是21个物体某一部分的概率。
+
+用文中的公式表示这个过程就是下面这样：
 $$
     r_c(i, j | \Theta) = \sum_{(x,y) \in bin(i,j)} z_{i,j,c} (x+x_0,y+y_0 | \Theta) / n.
 $$
 
 这里的$r_c$是输出的最后结果，$z_{i, j, c}$表示某一个特征图比如$z_{1, 2, 1}$表示的是编号为1的物体的“中右部分”的概率，也就是第(1\*3 + 2) * 21 + 1 = 106层特征图，把这层特征图对应ROI的中右部分做一个Average Pooling得到的一个值就是$r_c(i, j)$的值了，最后把得到的[300x3x3x21]（假设有300个ROI）的特征图。
 
-然后进入Voting环节，把上面得到的特征图做Average Pooling得到[300x21]，判断每个ROI是哪个类别。
+然后进入Voting环节，把上面得到的特征图做Average Pooling得到[300x21]，判断每个ROI是哪个类别。可以简单认为，整个R-FCN的结构其实是多个模型ensemble的结果，其中每个模型预测该框是否是目标物体的某一个部分，最后投票。
 
-别忘了还有老朋友bounding box回归，这里是在与ps roi pooling平行的卷积出
+## R-FCN的BBox回归
 
-到此为止R-FCN介绍结束，这里有一个[PyTorch版的实现](https://github.com/PureDiors/pytorch_RFCN)可以参考。
+别忘了还有老朋友bounding box回归，在R-FCN中的bbox回归和Faster RCNN的有所区别，记得我们之前说过，Faster RCNN在ROIPooling之后还有一个ResNet的C5层用于ROIPooling之后的特征提取，然后在C5之后，分出两支，一支作为分类，一支作为回归。在RFCN中不存在ROIPooling后的特征提取层，所以不能这么做。因此R-FCN的做法是：使用两个独立的PS-ROIPooling分别完成分类和回归。
 
-## PSROIPooling的cuda实现
+同样为了方便理解我们这里把后面的整体结构图连同分类和回归一起画出来，假设k=7：
+
+![rfcn-bbox](/Users/prince/Downloads/rfcn-bbox.png)
+
+正如我们前面说的，在R-FCN的C5特征提取结束以后，会通过一个1x1的卷积把通道缩减为[k x k x 21]，在同时，还会用一个1x1的卷积把通道缩减为[k x k x 8]通道的特征图，经过PS-ROIPooling以后，形状变成[k x k x 8]，同样的，经过Average Pooling，Squeeze到[1x1x8]，为什么是8呢，其实是要做背景类和前景类的bbox回归，每个类4个坐标就是8个(当然背景类没有bbox，所以实际中只有4通道真正使用的)，这种做法在Faster-RCNN的实现中被认为是`Class Agnostic`的做法，当然也有一些实现中，使用了非`Class Agnostic`，这个时候，就使用84(4x21)代替8的位置，为每一个类别单独构造一个回归器。
+
+## R-FCN的总结
+
+到此为止R-FCN原理介绍结束，这里有一个[PyTorch版的实现](https://github.com/princewang1994/R-FCN.pytorch)可以参考，我们之后会讲一些R-FCN实现上的东西
+
+## PSROIPooling的CUDA实现
+
+讲完了R-FCN的原理，现在我们聊一下RFCN中最重要的部分——PS-ROIPooling的实现，这里我们直接分析CUDA加速版的PS-ROIPooling，下面的阅读可能需要一些基本的CUDA编程的知识。
 
 该cuda代码来自R-FCN的[caffe版RFCN](https://github.com/pytorch/pytorch/blob/master/modules/detectron/ps_roi_pool_op.cu)，以下我们假设在做一个3x3的PSROIPooling，即`pooled_height == pool_width == 3 `，class数量为21，图中的变量已经在下图中标出：
 
 ![](http://oodo7tmt3.bkt.clouddn.com/blog_20180713200808.png)
-
-
 
 ```c++
 template <typename T> //这里先定义一个T目的是为了更好的泛化，如float32，float64
