--- a/_posts/DeepLearning/2018-05-28-DCNet.md
+++ b/_posts/DeepLearning/2018-05-28-DCNet.md
@@ -81,7 +81,7 @@ $$
 BallConv的改进其实是利用一个操作半径$\rho$，在HyperSphere的基础上，如果$\|\|x\|\| < \rho$，那么h(x)直接按x线性增长，如果超过$\rho$，再将h(x)限制在$\rho$的范围内，具体的，BallConv的函数定义为：
 
 $$
-f_d(w, x) = \alpha \cdot \frac{\min(\|\|x\|\|, \rho)}{\rho} \cdot g(\theta_{(w,x)})
+f_d(w, x) = \alpha \cdot \frac{\min(\|x\|, \rho)}{\rho} \cdot g(\theta_{(w,x)})
 $$
 
 对于$\|\|x\|\| < \rho$的情况，$f(w, x) = \frac{\alpha}{\rho} \cdot \|\|x\|\|$，线性增长，否则，与HyperSphere函数行为一致。个人觉得这里有点weight clip的意思。
@@ -149,7 +149,7 @@ $$
 
 ## 3. 解耦算子的可视化
 
-如下图是解耦算子的可视化，主要用来理解量级函数的，除了左上角第一个base convolution，剩余的都设置$\|\|w\|\|=1$，这是因为一般认为$\|\|w\|\|$与x长度相乘对分类没有直接相关，而是x长度与inner-class variance有关系，下图中红色代表最终相乘的向量，绿色代表原始向量长度，圆形半径即**操作半径**，一些首先量级函数在$\|\|x\|\|$超过半径的时候会有很大的限制（如Hyperball，Tanh）
+如下图是解耦算子的可视化，主要用来理解量级函数的，除了左上角第一个base convolution，剩余的都设置$\|\|w\|\|=1$，这是因为一般认为$\|\|w\|\|$与x长度相乘对分类没有直接相关，而是x长度与inner-class variance有关系，下图中红色代表最终相乘的向量，绿色代表原始向量长度，圆形半径即**操作半径**，一些受限量级函数在$\|\|x\|\|$超过半径的时候会有很大的限制（如Hyperball，Tanh）
 
 ![](http://oodo7tmt3.bkt.clouddn.com/blog_20180528213237.png)
 
