--- a/_posts/DeepLearning/2018-07-13-R-FCN.md
+++ b/_posts/DeepLearning/2018-07-13-R-FCN.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Object Detection via Region-based Fully Convolutional Networks"
 date:   2018-07-13
 categories: DeepLearning
-tags: DeepLearning ComputerVision
+tags: DeepLearning ComputerVision ObjectDetection
 mathjax: true
 author: Prince
 ---
