--- a/_posts/DeepLearning/2018-12-01-Soft-NMS.md
+++ b/_posts/DeepLearning/2018-12-01-Soft-NMS.md
@@ -2,8 +2,8 @@
 layout: post
 title: "Soft(er)-NMS：非极大值抑制算法的两个改进算法"
 date: 2018-12-01
-categories: DeepLearning NMS
-tags: None
+categories: DeepLearning 
+tags: DeepLearning NMS ObjectDetection
 mathjax: true
 author: Prince
 ---
