--- a/_posts/DeepLearning/2018-12-09-SSN.md
+++ b/_posts/DeepLearning/2018-12-09-SSN.md
@@ -3,7 +3,7 @@ layout: post
 title: "Temporal Action Detection with Structured Segment Networks(SSN)"
 date: 2018-12-09
 categories: DeepLearning
-tags: None
+tags: DeepLearning TemporalActionDetection
 mathjax: true
 author: Prince
 ---
