--- a/_posts/DeepLearning/2019-04-21-GA-RPN.md
+++ b/_posts/DeepLearning/2019-04-21-GA-RPN.md
@@ -3,7 +3,7 @@ layout: post
 title: " Region Proposal by Guided Anchoring"
 date: 2019-04-21
 categories: DeepLearning
-tags: None
+tags: DeepLearning ObjectDetection
 mathjax: true
 author: Prince
 ---
@@ -69,7 +69,7 @@ NL子网络用来预测当前位置是是某个object中心的概率，只包含
 
 那么用什么标签来训练这个网络呢？根据下面这张图，文章把一个object分成CR，IR和OR三个部分：
 
-- $CR = R(x_g' , y'_g , σ_1w' , σ_1h' )​$，以gt的中心为中心，把h和w都乘上缩小因子σ1
+- $CR = R(x_g' , y'_g , σ_1w' , σ_1h' )$，以gt的中心为中心，把h和w都乘上缩小因子σ1
 - $IR= R(x_g' , y'_g , σ_2w' , σ_2h' )$，以gt的中心为中心，把h和w都乘上缩小因子σ2
 - CR和IR满足（$\sigma2>\sigma1$）
 - 图中绿色的部分为CR，黄色的部分为IR
